# Reelarr

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  media-share-pipeline-spec.md  reelarr-spec.md
backend/: pyproject.toml
backend/reelarr/: __init__.py  config.py  db.py  main.py
backend/reelarr/ai/: __init__.py  interfaces.py  openai_compat.py
backend/reelarr/api/: __init__.py  requests.py  settings.py  system.py  webhooks.py
backend/reelarr/fulfillment/: __init__.py  arr.py  base.py  seerr.py
backend/reelarr/intake/: __init__.py  base.py  discord.py  slack.py  telegram.py  whatsapp.py
backend/reelarr/models/: __init__.py  requests.py  settings.py  sources.py
backend/reelarr/pipeline/: __init__.py  identify.py  media.py  prompts.py  tmdb.py
backend/reelarr/services/: connect.py  processor.py  settings.py
backend/tests/: conftest.py  test_config.py  test_fulfillment_clients.py  test_intake_base.py  test_media.py  test_pipeline.py  test_processor.py  test_prompts.py  test_tiktok_comments.py  test_tmdb.py
deploy/: litellm-config.yaml  reelarr.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  theme.css
frontend/src/components/: PageHeader.tsx  Sidebar.tsx  TestButton.tsx
frontend/src/pages/: Activity.tsx  Library.tsx  Pending.tsx  System.tsx
frontend/src/pages/settings/: Connect.tsx  Fulfillment.tsx  General.tsx  Identification.tsx  Metadata.tsx  Sources.tsx  Tags.tsx  Ui.tsx
